[package]
name = "pc_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
pid_core = { path = "../pid_core" }
rand = "0.10.1" # Added for sensor noise injection
rayon = "1.12.0"
rgb = "0.8.53"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
textplots = "0.8.7"
